# clintrAI

./: .gitignore  code_style.md  pyproject.toml
airflow/dags/: clinical_trials_preprocessing_dag.py
clintrai/: __init__.py  config.py
clintrai/airflow/operators/: data_harmonization.py  preparation.py  schema.py  strategies.py
clintrai/analytics/: __init__.py  marts.py  retrieval.py
clintrai/api/: __init__.py  client.py  exceptions.py  hybrid_client.py  protocols.py  stats.py  studies.py
clintrai/metaflow/: __init__.py  clinical_trials_flow.py  embeddings.py  harmonization.py  nlp_processing.py
clintrai/models/: __init__.py  api_models.py  api_models_new.py  csv_models.py  json_models.py  trial.py  types.py
clintrai/processing/: __init__.py  documents.py  preparation.py  schema.py  strategies.py
database/migrations/: 0001_canonical_schema.sql  0002_document_chunk_pipeline.sql  0003_data_lineage_reprocessing_controls.sql  0004_eligibility_dual_representation.sql  0005_postgis_site_geography.sql
docs/: clnical_trials.md
docs/analytics/: neo4j_projection_query_catalog.cypher  parquet_duckdb_access_pattern.md  postgis_site_geography_access_pattern.md
docs/apis/clinical_trials_dot_gov/: data_model_fields.md  enums.md  field_values.md  list_field_sizes.md  search_areas.md  single_study.md  study_sizes.md  version.md
docs/plans/: 2026-04-01-data-lineage-reprocessing-controls-design.md  2026-04-10-neo4j-decision-gates.md  2026-04-12-neo4j-projection-design.md
scripts/: analyze_json_structure.py  compare_api_data.py  compare_api_data_simple.py  export_analytics_marts.py  ris_field_mapping.py
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/api/: __init__.py  test_stats.py  test_studies.py
tests/unit/: __init__.py
tests/unit/analytics/: test_hybrid_retrieval.py  test_marts_export.py
tests/unit/api/: test_client.py  test_exceptions.py  test_protocols.py  test_studies.py
tests/unit/database/: test_canonical_schema_sql.py  test_data_lineage_controls_sql.py  test_document_chunk_schema_sql.py  test_eligibility_dual_representation_sql.py  test_postgis_site_geography_sql.py
tests/unit/docs/: test_neo4j_projection_design_doc.py
tests/unit/models/: __init__.py  test_csv_models.py  test_json_processing.py
tests/unit/processing/: test_documents_provenance.py
