[project]
name = "clintrai"
version = "0.1.0"
description = "Data engineering and analysis pipeline for clinical trial data."
authors = [
    {name = "Mike Hamilton",email = "mike.hamilton7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "duckdb (>=1.3.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "great-tables (>=0.18.0,<0.19.0)",
    "polars (>=1.31.0,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "certifi (>=2025.7.14,<2026.0.0)",
    "curl-cffi (>=0.12.0,<0.13.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.5"
mypy = "^1.17.0"
datamodel-code-generator = "^0.32.0"
pytest-asyncio = "^1.1.0"
pytest-httpx = "^0.35.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
