[project]
name = "clintrai"
version = "0.1.0"
description = "Data engineering and analysis pipeline for clinical trial data."
authors = [
    {name = "Mike Hamilton",email = "mike.hamilton7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "duckdb (>=1.3.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "great-tables (>=0.18.0,<0.19.0)",
    "polars (>=1.31.0,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "certifi (>=2025.7.14,<2026.0.0)",
    "curl-cffi (>=0.12.0,<0.13.0)",
    # Core NLP & ML
    "scikit-learn (>=1.5.0,<2.0.0)",
    "nltk (>=3.9,<4.0.0)",
    "transformers (>=4.40.0,<5.0.0)",
    "torch (>=2.3.0,<3.0.0)",
    "sentence-transformers (>=2.7.0,<3.0.0)",
    "datasets (>=2.19.0,<3.0.0)",
    # Distributed Computing & Orchestration
    "dask[complete] (>=2024.5.0,<2025.0.0)",
    "apache-airflow (>=2.10.0,<3.0.0)",
    "apache-airflow-providers-postgres (>=5.12.0,<6.0.0)",
    "apache-airflow-providers-dask (>=1.5.0,<2.0.0)",
    # Data Lakehouse (Apache Iceberg + Parquet)
    "pyiceberg (>=0.7.0,<1.0.0)",
    "pyarrow (>=16.0.0,<17.0.0)",
    # Data Version Control
    "dvc[all] (>=3.50.0,<4.0.0)",
    # Translation & Multilingual
    "deep-translator (>=1.11.4,<2.0.0)",
    # Annotation & Active Learning
    "doccano (>=1.8.0,<2.0.0)",
    "modAL (>=0.4.1,<0.5.0)",
    # Text Analysis
    "textstat (>=0.7.3,<1.0.0)",
    "lexical-diversity (>=0.1.1,<0.2.0)",
    # PDF Processing
    "pypdf (>=4.0.0,<5.0.0)",
    "pdfplumber (>=0.11.0,<1.0.0)",
    # Logging
    "loguru (>=0.7.0,<1.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.5"
mypy = "^1.17.0"
datamodel-code-generator = "^0.32.0"
pytest-asyncio = "^1.1.0"
pytest-httpx = "^0.35.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
