[project]
name = "clintrai"
version = "0.1.0"
description = "Data engineering and analysis pipeline for clinical trial data."
authors = [
    {name = "Mike Hamilton",email = "mike.hamilton7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb (>=1.3.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "great-tables (>=0.18.0,<0.19.0)",
    "polars (>=1.31.0,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "certifi (>=2025.7.14,<2026.0.0)",
    "curl-cffi (>=0.12.0,<0.13.0)",
    # Core NLP & ML
    "scikit-learn (>=1.5.0,<2.0.0)",
    "nltk (>=3.9,<4.0.0)",
    "transformers (>=4.40.0,<5.0.0)",
    "torch (>=2.3.0,<3.0.0)",
    "sentence-transformers (>=2.7.0,<3.0.0)",
    "datasets (>=2.19.0,<3.0.0)",
    # Distributed Computing & Orchestration
    "dask[complete] (>=2024.5.0,<2025.0.0)",
    # Data Lakehouse (Apache Iceberg + Parquet)
    "pyiceberg (>=0.7.0,<1.0.0)",
    "pyarrow (>=16.0.0,<17.0.0)",
    # Data Version Control
    "dvc[all] (>=3.50.0,<4.0.0)",
    # Text Analysis
    "textstat (>=0.7.3,<1.0.0)",
    "lexical-diversity (>=0.1.1,<0.2.0)",
    # PDF Processing
    "pypdf (>=4.0.0,<5.0.0)",
    "pdfplumber (>=0.11.0,<1.0.0)",
    # Logging
    "loguru (>=0.7.0,<1.0.0)",
    "metaflow (>=2.16.8,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "autogenstudio (>=0.4.2.2,<0.5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.5"
mypy = "^1.17.0"
datamodel-code-generator = "^0.32.0"
pytest-asyncio = "^1.1.0"
pytest-httpx = "^0.35.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# -----------------
# Linter Settings
# -----------------
[tool.ruff.lint]
# Select a comprehensive set of rule categories.
# E = pycodestyle Errors
# W = pycodestyle Warnings
# F = Pyflakes
# I = isort (import sorting)
# C90 = McCabe complexity
# N = pep8-naming
# Q = flake8-quotes (for enforcing quote style)
# UP = pyupgrade (modernize code)
# B = flake8-bugbear (potential bugs)
# SIM = flake8-simplify (refactoring suggestions)
# TID = flake8-tidy-imports
# ARG = flake8-unused-arguments
# TCH = flake8-type-checking (runtime import checks)
# PIE = flake8-pie (misc improvements)
# RUF = Ruff-specific rules
select = ["E", "W", "F", "I", "C90", "N", "Q", "UP", "B", "SIM", "TID", "ARG", "TCH", "PIE", "RUF"]

# Ignore specific rules if they conflict with your style.
# E501 is often ignored in favor of the formatter's line length.
ignore = ["E501"]

# Enforce double quotes for strings.
# Q000: Bad quotes - double quotes
# Q001: Bad quotes - single quotes
# Q002: Bad quotes - docstring
# Q003: Avoidable escaped quote
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
avoid-escape = false # Allows escaping quotes if necessary

# Configure import sorting.
[tool.ruff.lint.isort]
known-first-party = ["clintrai"]
force-sort-within-sections = true

# Set McCabe complexity limit to a reasonable value.
[tool.ruff.lint.mccabe]
max-complexity = 10


# -----------------
# Formatter Settings
# -----------------
[tool.ruff.format]
quote-style = "double"